--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Alexander CD - Web Developer ">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="To do list app, using useReducer, useState, useEffect, custom hooks and local storage"
     />
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.alexandercd.dev/">
+    <meta property="og:title" content="Alexander CD - Web Developer ">
+    <meta property="og:description" content="I'm Alexander Chi web developer with 3 years experience.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/alexandercds/alexandercddev/master/src/assets/images/illustration.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.alexandercd.dev/">
+    <meta property="twitter:title" content="Alexander CD - Web Fullstack Developer">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -20,7 +31,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>React App</title>
+    <title>ToDo App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
